otel-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry
  labels:
    environment: test
