streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: streamlit
  ports:
    - name: streamlit-port
      protocol: TCP
      port: 80
      targetPort: 8501
      nodePort: 30080
