cr-daemonset-otelcol.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: daemonset-otelcol-egress-allow
  namespace: opentelemetry
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: daemonset-otelcol
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
      to:
        - ipBlock:
            cidr: 192.168.1.102/32 # Replace with your Datadog/Backend static IP
