cr-otelcol.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otelcol-egress-allow
  namespace: opentelemetry
spec:
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 8088 # Splunk HEC Port
      to:
        - ipBlock:
            cidr: 192.168.1.102/32
